[tool.poetry]
name = "repl-nix-selenium-youtube-scraper-live"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_selenium_youtube_scraper_live"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
selenium = "4.23.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
